# rs-car-sync

./: Cargo.toml  README.md
src/: block_cid.rs  car_block.rs  car_header.rs  carv1_header.rs  lib.rs  varint.rs
tests/: car_read_all.rs  errors.rs
